# voicevox_client_cpp

./: CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  README_8md.html  annotated.html  classes.html  classvoicevox__client__cpp_1_1Client-members.html  classvoicevox__client__cpp_1_1Client.html  classvoicevox__client__cpp_1_1Client_a04669d8df0c0dd0de01254d40d0e9706.html  classvoicevox__client__cpp_1_1Client_a4267a5fe07ad9013157f2eeba1c33af4.html  classvoicevox__client__cpp_1_1Client_a4f62510afa60bc26c233c1232fbfd756.html  classvoicevox__client__cpp_1_1Client_a5669eee596b3d33887c9cc30bd881c38.html  classvoicevox__client__cpp_1_1Client_a74d5a62e7bd08f115bf6d453cdb8d44a.html  classvoicevox__client__cpp_1_1Client_a91bc59c744a2197b4d46ebe81dff9847.html  classvoicevox__client__cpp_1_1Client_a969f9bb99905e9255e63243779bf09a6.html  classvoicevox__client__cpp_1_1Client_aaebf8b70798dc1b841b4fe6fe0c26e45.html  classvoicevox__client__cpp_1_1Client_ac5ae03b67775a4c1e2798a903173699a.html  classvoicevox__client__cpp_1_1Client_af21caf3bd7c5fc879090279dc1ca80ee.html  classvoicevox__client__cpp_1_1Client_af386eb936e9a7c0fd576d52e5c8e9f0a.html  classvoicevox__client__cpp_1_1request_1_1Builder-members.html  classvoicevox__client__cpp_1_1request_1_1Builder.html  classvoicevox__client__cpp_1_1request_1_1Builder__inherit__graph.dot  classvoicevox__client__cpp_1_1request_1_1Builder_a065871d65da176453036ee14623b4614.html  classvoicevox__client__cpp_1_1request_1_1Builder_a0bd74a4940a61fededc53bcf3e8b3420.html  classvoicevox__client__cpp_1_1request_1_1Builder_a0be4fa2c9c630f8770592f00480083c1.html  classvoicevox__client__cpp_1_1request_1_1Builder_a4a8217c4539151d2626f378bffff94b2.html  classvoicevox__client__cpp_1_1request_1_1Builder_abf3ece3c78ddf0f7e95a20b3568ff540.html  classvoicevox__client__cpp_1_1request_1_1Builder_acd21738b7bb3dcdb1eb491e736c8e105.html  classvoicevox__client__cpp_1_1request_1_1Builder_ad8caaf71dce14bd90cc003fdcb05349e.html  classvoicevox__client__cpp_1_1request_1_1Builder_aebf36120e478b1e62533b2ed96ff22c0.html  classvoicevox__client__cpp_1_1request_1_1Builder_aee6720ff5124ea332574fb9b4bbd4bdb.html  classvoicevox__client__cpp_1_1request_1_1get_1_1core__versions_1_1Builder-members.html  classvoicevox__client__cpp_1_1request_1_1get_1_1core__versions_1_1Builder.html  classvoicevox__client__cpp_1_1request_1_1get_1_1core__versions_1_1Builder__coll__graph.dot  classvoicevox__client__cpp_1_1request_1_1get_1_1core__versions_1_1Builder__inherit__graph.dot  classvoicevox__client__cpp_1_1request_1_1get_1_1core__versions_1_1Builder_a4827f322e910823de29b550179009959.html  classvoicevox__client__cpp_1_1request_1_1get_1_1speakers_1_1Builder-members.html  classvoicevox__client__cpp_1_1request_1_1get_1_1speakers_1_1Builder.html  (+116 more)
.github/workflows/: build_document.yml  run_test.yml
include/voicevox_client_cpp/: client.hpp  get.hpp  post.hpp  request.hpp  voicevox_client_cpp.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  (+6 more)
src/voicevox_client_cpp/: client.cpp  get.cpp  post.cpp
src/voicevox_client_cpp/sample/: get_core_versions.cpp  get_speakers.cpp  get_version.cpp  post_audio_query_then_synthesis.cpp
test/: CMakeLists.txt  test_request.cpp
